refactor(session-review): refactor all handlers that related to jwt - delete security bearer on swagger documentation
