# docs/swagger.json
@@ -945,11 +945,6 @@
                 }
             },
             "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
                 "description": "Create session review",
                 "consumes": [
                     "application/json"
